# pico-sdk-freertos11-template

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOS_Kernel_import.cmake
include/: FreeRTOSConfig.h
src/: CMakeLists.txt  main.c
